# mailx

./: .gitignore  README.md  REQS.md  apple-mail-export.py  pyproject.toml  test_apple_mail_export.py
mailx/: __init__.py  emlx.py  logger.py  mbox.py  model.py  report.py  scan.py
tests/: conftest.py  test_mailx_cli.py  test_mailx_emlx.py  test_mailx_end_to_end.py  test_mailx_logger.py  test_mailx_mbox.py  test_mailx_report.py  test_mailx_scan.py  tests_support.py
